--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Personal Portfolio Webpage</title>
+  <title>Personal Portfolio Webpage Test</title>
   <link href="style.css" rel="stylesheet">
   <script src="script.js"></script>
   <meta charset="UTF-8">
