--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="navbar-hover" onmouseover="document.getElementById('navbar-container').style.top = '0px'" onmouseout="document.getElementById('navbar-container').style.top = '-50px'"></div>
+    <div id="navbar-hover" onmousemove="document.getElementById('navbar-container').style.top = '0px'"></div>
     <div id="navbar-container">
         <nav id="topmenu">
             <a href="https://github.com/Yaqubi1/" id="profile-link" target="_blank">Github</a>
