js click menu disappear

--- a/index.htm
+++ b/index.htm
@@ -24,6 +24,7 @@
             </ul>
         </nav>
     </div>
+    <section id="non-menu" onclick="document.getElementById('navbar-container').style.top = '-100px'">
     <section id="welcome-section">
         <div id="welcome-text">
             <h1 id="h1-welcome">I am Yaqubi1</h1>
@@ -63,6 +64,6 @@
         </div>
         </div>
         </section>
-
+    </section>
 </body>
 </html>
