--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>Personal Portfolio Webpage</title>
+  <link href="reset.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
   <script src="script.js"></script>
   <meta charset="UTF-8">
